updated the sonar to have more waves, and hopefully fixed on mobile

--- a/sonar.css
+++ b/sonar.css
@@ -11,7 +11,7 @@ html, body, .sonar-wrapper {
   position: relative;
   z-index: 0;
   overflow: hidden;
-  padding: 8rem 0;
+  /*padding: 8rem 0;*/
 }
 
 /* The circle */
@@ -56,4 +56,16 @@ html, body, .sonar-wrapper {
     transform: scale(3);
     opacity: 0;
   }
+}
+
+
+.sonar-emitter .sonar-wave:nth-child(2){
+    animation-delay:.4s;
+    -webkit-animation-delay:.4s;
+    -moz-animation-delay: .4s;
+}
+.sonar-emitter .sonar-wave:nth-child(3){
+    animation-delay:.8s;
+    -webkit-animation-delay: .8s;
+    -moz-animation-delay: .8s;
 }
